# aws-regional-product-services

./: Cargo.toml  README.md  Taskfile.yaml  package.json  pnpm-lock.yaml
.github/workflows/: test.yaml
schema/: aws-regional-product-services.json
src/: aws_regional_product_services.rs  cli.rs  command.rs  config.rs  main.rs  output.rs  service.rs
src/aws_regional_product_services/: cache.rs  fetch.rs  retriever.rs  schema.rs  service.rs
