[package]
name = "aws-regional-product-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
once_cell = "1"
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
termcolor = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
regex = "1"
