[package]
name = "aws-regional-product-services"
version = "0.2.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "list/diff of AWS services by regions"
repository = "https://github.com/masinc/aws-regional-product-services"
readme = "README.md"
keywords = ["aws", "cli"]
categories = ["command-line-interface"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
once_cell = "1"
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
termcolor = "1"
thiserror = "1"


[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.strum]
version = "0.25"
features = ["derive"]

[dev-dependencies]
regex = "1"
